@@ -113,6 +113,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #9750: Fix sqlite3.Connection.iterdump on tables and fields
+  with a name that is a keyword or contains quotes. Patch by Marko
+  Kohtala.
+
 - Issue #10287: nntplib now queries the server's CAPABILITIES again after
   authenticating (since the result may change, according to RFC 4643).
   Patch by Hynek Schlawack.
